--- a/bootstrap.css
+++ b/bootstrap.css
@@ -1,51 +1,49 @@
-
-.jumbotron
-{
-  color:black;
-  font-size: 100px;
-  text-align: center;
-  margin-top: 20px;
-  font-family: cursive;
-  letter-spacing: 10px;
- background-image: url("img/welcome.jpg"); 
-
-
+.jumbotron {
+    color: black;
+    font-size: 100px;
+    text-align: center;
+    margin-top: 20px;
+    font-family: cursive;
+    letter-spacing: 10px;
+    background-image: url("img/welcome.jpg");
 }
 
-
-
-.hero-image
-{
- background-image: url("img/hero.jpg"); 
- background-position: center;
- background-repeat: no-repeat;
- height: 550px;
- padding-top: 25%;
- margin-top: 5%;
- 
- position: relative;
+.col-sm-3 img {
+	height: 250px;
+	width: 250px;
 }
 
-.hero-text
-{
-	text-align: center;
-	position: absolute;
-	top: 65%;
-	left: 50%;
-	font-size:25px;
-	transform: translate(-50%,-50%);
-	color: black;
+.hero-image {
+    background-image: url("img/hero.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 550px;
+    padding-top: 25%;
+    margin-top: 5%;
+
+    position: relative;
 }
 
-.footer
-{
-	background:black;
-	font-family: cursive;
-	color: #eee;
-    margin-top: 10%;
-    margin-left: 1%;
-
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    font-size: 25px;
+    transform: translate(-50%, -50%);
+    color: black;
+}
+.video {
+    text-align: center;
 }
 
+footer {
+    background: black;
+    font-family: cursive;
+    color: #eee;
+    margin-top: 4%;
+}
 
-
+footer a{
+	width: 3.5%;
+}
